--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
     "тест": "test",
     "перевод": "translate",
-    "Язык": "English"
+    "Язык": "English",
+    "Страница не найдена!": "Page not found"
 }
