--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,7 @@
     "тест": "test",
     "перевод": "translate",
     "Язык": "English",
-    "Страница не найдена!": "Page not found"
+    "Страница не найдена!": "Page not found",
+    "Произошла непредвиденная ошибка": "An unforeseen mistake occurred",
+    "Перезагрузить страницу": "Reload page"
 }
