--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,7 @@
 {
     "тест": "тест",
     "Перевод": "Перевод",
-    "Язык": "Русский"
+    "Язык": "Русский",
+    "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+    "Перезагрузить страницу": "Перезагрузить страницу"
 }
