--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,5 +9,6 @@
   "Обновить страницу": "Обновить страницу",
   "throw error": "throw error",
   "Главная": "Главная",
-  "О сайте": "О сайте"
+  "О сайте": "О сайте",
+  "Короткий язык": "RU"
 }
