--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,9 +5,10 @@
   "Язык": "English",
   "новый перевод": "новый перевод",
   "Страница не найдена": "Page not found",
-  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+  "Произошла непредвиденная ошибка": "An unexpected error has occured",
   "Обновить страницу": "Reload page",
   "throw error": "throw error",
   "Главная": "Main",
-  "О сайте": "About us"
+  "О сайте": "About us",
+  "Короткий язык": "EN"
 }
