--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,5 +10,10 @@
   "throw error": "throw error",
   "Главная": "Main",
   "О сайте": "About us",
-  "Короткий язык": "EN"
+  "Короткий язык": "EN",
+  "Значение": "value",  
+  "Добавить": "increment",  
+  "Отнять": "decrement",
+  "increment": "Увеличить",
+  "decrement": "Уменшьить"
 }
