--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -10,5 +10,8 @@
   "throw error": "throw error",
   "Главная": "Главная",
   "О сайте": "О сайте",
-  "Короткий язык": "RU"
+  "Короткий язык": "RU",
+  "Значение": "Значение",  
+  "Добавить": "Добавить",  
+  "Отнять": "Отнять"
 }
