--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,17 +1,19 @@
 {
-  "Тестовый пример": "Тестовый пример",
-  "Перевод": "Перевод",
-  "Главная страница": "Главная страница",
-  "Язык": "Русский",
-  "новый перевод": "новый перевод",
-  "Страница не найдена": "Страница не найдена",
-  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
-  "Обновить страницу": "Обновить страницу",
-  "throw error": "throw error",
-  "Главная": "Главная",
-  "О сайте": "О сайте",
-  "Короткий язык": "RU",
-  "Значение": "Значение",  
-  "Добавить": "Добавить",  
-  "Отнять": "Отнять"
+    "Тестовый пример": "Тестовый пример",
+    "Перевод": "Перевод",
+    "Главная страница": "Главная страница",
+    "Язык": "Русский",
+    "новый перевод": "новый перевод",
+    "Страница не найдена": "Страница не найдена",
+    "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+    "Обновить страницу": "Обновить страницу",
+    "throw error": "throw error",
+    "Главная": "Главная",
+    "О сайте": "О сайте",
+    "Короткий язык": "RU",
+    "Значение": "Значение",
+    "Добавить": "Добавить",
+    "Отнять": "Отнять",
+    "Введите логин": "Введите логин",
+    "Введите пароль": "Введите пароль"
 }
