--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,5 +14,8 @@
     "Значение": "value",
     "Добавить": "increment",
     "Введите логин": "Enter login",
-    "Введите пароль": "Enter password"
+    "Введите пароль": "Enter password",
+    "Вы ввели неверный логин или пароль": "You have entered an incorrect login or password.",
+    "Форма авторизации": "Authorization form",
+    "Войти": "Login"
 }
