--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -15,5 +15,8 @@
     "Добавить": "Добавить",
     "Отнять": "Отнять",
     "Введите логин": "Введите логин",
-    "Введите пароль": "Введите пароль"
+    "Введите пароль": "Введите пароль",
+    "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
+    "Форма авторизации": "Форма авторизации",
+    "Войти": "Войти"
 }
